<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.istroller.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/weather"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/weather"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cloudy"
            android:id="@+id/weatherText"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="7.2 C"
            android:id="@+id/tempC"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="44.6 F"
            android:id="@+id/tempF"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/category_tempAIr"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingBottom="8dp"
                android:padding="8dp"
                android:text="@string/cartTemp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:src="@drawable/thermometer"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="73.6 F"
                android:id="@+id/cartTemperature"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:text="@string/bottleTemp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:src="@drawable/thermometer"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="---"
                android:textStyle="bold"
                android:padding="8dp"
                android:id="@+id/bottleWarmerTemperature"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingBottom="8dp"
                android:padding="8dp"
                android:text="@string/airPurity"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:id="@+id/airPurityImage"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="---"
                android:padding="8dp"
                android:id="@+id/airPurity"/>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="0dp"

        android:layout_weight="1.5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/category_nearbyPlaces"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/nearbyStores"

            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/nearbySupplies"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:src="@drawable/clinic"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/category_SOS"
            android:layout_weight="1"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/emergencyAlert"

            android:id="@+id/emergencyAlert"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:src="@drawable/phone"
                />

            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/music"
            android:layout_weight="1"
            android:background="@color/category_playMusic"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"

            android:layout_weight="1"
            android:text="@string/music"/>
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="8dp"-->
                <!--android:src="@drawable/play"-->


            </LinearLayout>

    </LinearLayout>


</LinearLayout>
